--- a/pom.xml
+++ b/pom.xml
@@ -111,6 +111,10 @@
 			<artifactId>qlrm</artifactId>
 			<version>3.0.1</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-redis</artifactId>
+		</dependency>
 	</dependencies>
 
 
